fix edge color dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,12 @@
   --background-color-secondary: linear-gradient(#1f1f1f, #383838);
   --text-color: #ececec;
   --border-color-hover: #646cff;
+
+  .svelte-flow {
+    --xy-edge-stroke-default: #efefef;
+    /* --xy-handle-border-color: #efefef; */
+    --xy-handle-background-color-default: #646cff;
+  }
 }
 
 body {
